--- a/ChronoDrive-UI/src/app/home/home.component.html
+++ b/ChronoDrive-UI/src/app/home/home.component.html
@@ -1,5 +1,21 @@
-<div class="container">
-  <h1 class="title">
-    {{ 'PAGES.HOME.TITLE' | translate }}
-  </h1>
+<mdc-drawer>
+  <mdc-drawer-header title="Menu"></mdc-drawer-header>
+  <mdc-drawer-content>
+    <mdc-list>
+      <mdc-list-item>
+        <button mdc-button (click)="loginMenuClick()">
+          <span *ngIf="!loggedIn">Login</span>
+          <span *ngIf="loggedIn">Log out</span>
+        </button>
+      </mdc-list-item>
+    </mdc-list>
+  </mdc-drawer-content>
+</mdc-drawer>
+<div class="container" mdcDrawerAppContent>
+  <ng-container *ngIf="!loggedIn">
+
+  </ng-container>
+  <ng-container *ngIf="loggedIn">
+
+  </ng-container>
 </div>
