--- a/ChronoDrive-UI/src/app/home/home.component.scss
+++ b/ChronoDrive-UI/src/app/home/home.component.scss
@@ -1,12 +1,12 @@
-.container {
-  height: 100%;
+.row {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
 
-  .title {
-    color: white;
-    margin: 0;
-    padding: 50px 20px;
-  }
+.logout {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
