--- a/ChronoDrive-UI/src/styles.scss
+++ b/ChronoDrive-UI/src/styles.scss
@@ -1,12 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
-$mdc-theme-primary: #1565c0; // primary color
-$mdc-theme-secondary: #388e3c; // secondary color
+// /* You can add global styles to this file, and also import other style files */
+// $mdc-theme-primary: #1565c0; // primary color
+// $mdc-theme-secondary: #388e3c; // secondary color
 
 @import "~@angular-mdc/theme/material";
 
-html, body {
+html, body { 
   margin: 0;
   padding: 0;
 
   height: 100%;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
