--- a/ChronoDrive-UI/src/styles.scss
+++ b/ChronoDrive-UI/src/styles.scss
@@ -3,6 +3,7 @@
 // $mdc-theme-secondary: #388e3c; // secondary color
 
 @import "~@angular-mdc/theme/material";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 html, body { 
   margin: 0;
