--- a/ChronoDrive-UI/src/app/file-manager/file-manager.component.html
+++ b/ChronoDrive-UI/src/app/file-manager/file-manager.component.html
@@ -9,7 +9,8 @@
     <div class="content" fxFlex fxLayout="row">
       <mat-grid-list cols="4" rowHeight="100px" fxFlex>
         <mat-grid-tile *ngFor="let element of fileElements" class=file-or-folder>
-          <span [matMenuTriggerFor]="rootMenu" [matMenuTriggerData]="{element: element}" #menuTrigger="matMenuTrigger"></span>
+          <!-- TODO: Add this back to reenable the right-click menu -->
+          <!-- <span [matMenuTriggerFor]="rootMenu" [matMenuTriggerData]="{element: element}" #menuTrigger="matMenuTrigger"></span> -->
           <div fxLayout="column" fxLayoutAlign="space-between center" (click)="navigate(element)" (contextmenu)="openMenu($event,element, menuTrigger)">
             <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="element.isFolder">folder</mat-icon>
             <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="!element.isFolder">insert_drive_file</mat-icon>
